--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@
 
         <div class="row  justify-content-center">
           <div class="col-lg-6">
-            <h3>Bocor</h3>
-            <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+            <h3>Brandnetic Technologies</h3>
+            <p>Helping people build brands through technology.</p>
           </div>
         </div>
 
