--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
           <div class="col-lg-4 box" data-aos="zoom-in">
             <h3>Free</h3>
-            <h4>$0<span>per month</span></h4>
+            <h4>$0<span>brand con</span></h4>
             <ul>
               <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
               <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
@@ -423,7 +423,7 @@
           </div>
 
           <div class="col-lg-6 mt-4 mt-lg-0">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form w-100" data-aos="fade-up">
+            <form action="forms/contact.php" method="post" data-netlify ="true" role="form" class="php-email-form w-100" data-aos="fade-up">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -471,7 +471,7 @@
         <div class="row footer-newsletter justify-content-center">
           <div class="col-lg-6">
             <form action="" method="post">
-              <input type="email" name="email" placeholder="Enter your Email"><input type="submit" value="Subscribe">
+              <input type="email" name="email" placeholder="enter your email"><input type="submit" value="Subscribe">
             </form>
           </div>
         </div>
