--- a/inner-page.html
+++ b/inner-page.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://www.facebook.com/photo/?fbid=4664056303646070&set=a.140606035991142&__cft__[0]=AZUUdMYCubKU4Yqea_kf6Pp2b_mo93EEYfhoOVr_oJBwoM0_X7zI76uYsQjyxLa_bLyrom_83L7DMGrGFLhffuZnysajtV7gkcn69Ac0Ky5vCTaeBErMQnrYDLW4wT6N6dw&__tn__=EH-R" rel="">
+  <link href="https://www.facebook.com/photo/?fbid=4664056303646070&set=a.140606035991142&__cft__[0]=AZUUdMYCubKU4Yqea_kf6Pp2b_mo93EEYfhoOVr_oJBwoM0_X7zI76uYsQjyxLa_bLyrom_83L7DMGrGFLhffuZnysajtV7gkcn69Ac0Ky5vCTaeBErMQnrYDLW4wT6N6dw&__tn__=EH-R" rel="">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
