--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-images"></i>
                   <h4><a href="#services">What is your purpose</a></h4>
-                  <p>Create a rock solid clear understanding in why you in business</p>
+                  <p>Create a rock solid clear understanding in why you are in business</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
@@ -142,7 +142,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Social Media Optimization</a></h5>
-                <p class="card-text">Socail media optimization (SMO) is needed to ensure your brand accounts align with your business and it's goals </p>
+                <p class="card-text">Social media optimization (SMO) is needed to ensure your brand accounts align with your business and it's goals </p>
                 <div class="read-more"><a href="#contact"><i class="bi bi-arrow-right"></i> Learn More</a></div>
               </div>
             </div>
@@ -317,17 +317,17 @@
 
         <div class="section-title">
           <h2 data-aos="fade-in">Frequently Asked Questions</h2>
-          <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p data-aos="fade-in">Creating a brand that resonates with your prospect customers is a surefire why to take your business to the next level. But before you can develop your brand, there are a few questions you've got to ask yourself.</p>
         </div>
 
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Non consectetur a erat nam at lectus urna duis?</h4>
+            <h4>What are your core attributes your brand should express?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+              You will want to consider when creating your brand is what core attributes you want your brand to express. Determining what qualities of your brand are important to you can then be drawn out through your brand personality.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -335,11 +335,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</h4>
+            <h4>What is a brand voice?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
+              Brand voice is the way you talk to your customers and is defined by your brand style of communication. Your brand voice is directed to your target audience, and it can have any style, as long as it feels true to your brand.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -356,29 +356,10 @@
           </div>
         </div><!-- End F.A.Q Item-->
 
-        <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-          <div class="col-lg-5">
-            <i class="bx bx-help-circle"></i>
-            <h4>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h4>
-          </div>
-          <div class="col-lg-7">
-            <p>
-              Aperiam itaque sit optio et deleniti eos nihil quidem cumque. Voluptas dolorum accusantium sunt sit enim. Provident consequuntur quam aut reiciendis qui rerum dolorem sit odio. Repellat assumenda soluta sunt pariatur error doloribus fuga.
-            </p>
-          </div>
-        </div><!-- End F.A.Q Item-->
+        <!-- End F.A.Q Item-->
 
-        <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
-          <div class="col-lg-5">
-            <i class="bx bx-help-circle"></i>
-            <h4>Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</h4>
-          </div>
-          <div class="col-lg-7">
-            <p>
-              Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
-            </p>
-          </div>
-        </div><!-- End F.A.Q Item-->
+        
+        <!-- End F.A.Q Item-->
 
       </div>
     </section><!-- End Frequently Asked Questions Section -->
@@ -400,22 +381,22 @@
               <div class="col-md-12">
                 <div class="info-box" data-aos="fade-up">
                   <i class="bx bx-map"></i>
-                  <h3>Our Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <h3>Our Location</h3>
+                  <p>Atlanta, Ga 30313</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>jermainebailey60@icloud.com<br>contact@example.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                  <p>(470) 531-7134<br></p>
                 </div>
               </div>
             </div>
