--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
-                  <h4><a href="#contact">Sucure your brand</a></h4>
+                  <h4><a href="#contact">Secure your brand</a></h4>
                   <p>Define your brand personality and voice, build a consisent, trustworthy brand</p>
                 </div>
               </div>
