--- a/index.html
+++ b/index.html
@@ -261,36 +261,36 @@
 
         <div class="section-title">
           <h2 data-aos="fade-in">Pricing</h2>
-          <p data-aos="fade-in">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p data-aos="fade-in">Having the right foundation is important to building a brand and sometimes it can become quite overwhelming. That's why we have placed great care into developing that founding for you. Our packages are flexiible to fit a small business or start-up with budgets of all sizes. Weather your're just starting up, rebranding or need to optimize your current social media platforms we got you covered. </p>
         </div>
 
         <div class="row no-gutters">
 
           <div class="col-lg-4 box" data-aos="zoom-in">
             <h3>Free</h3>
-            <h4>$0<span>brand con</span></h4>
+            <h4>$0<span>Consultation</span></h4>
             <ul>
-              <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-              <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-              <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-              <li class="na"><i class="bx bx-x"></i> <span>Pharetra massa massa ultricies</span></li>
-              <li class="na"><i class="bx bx-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+              <li><i class="bx bx-check"></i>Branding Foundation</li>
+              <li><i class="bx bx-check"></i>Social Media Platform Outlook</li>
+              <li><i class="bx bx-check"></i>One Hour of Free Consultation</li>
+              <li class="na"><i class="bx bx-x"></i> <span>Branding Strategy</span></li>
+              <li class="na"><i class="bx bx-x"></i> <span>Social Media Optimization</span></li>
             </ul>
-            <a href="#" class="get-started-btn">Get Started</a>
+            <a href="#contact" class="get-started-btn">Get Started</a>
           </div>
 
           <div class="col-lg-4 box featured" data-aos="zoom-in">
             <span class="featured-badge">Featured</span>
-            <h3>Business</h3>
-            <h4>$29<span>per month</span></h4>
+            <h3>Brand Strategy</h3>
+            <h4>$75<span>per hour</span></h4>
             <ul>
-              <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-              <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-              <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-              <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
-              <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
+              <li><i class="bx bx-check"></i> Building a brand idenity from the ground up</li>
+              <li><i class="bx bx-check"></i>Rebranding established business</li>
+              <li><i class="bx bx-check"></i>Creating a brand strategy</li>
+              <li><i class="bx bx-check"></i>Mapping out a social media strategy that aligns with the company brand idenity</li>
+              <li><i class="bx bx-check"></i>Developing a plan for websites and other digital assets that accurately reflect the brand voice</li>
             </ul>
-            <a href="#" class="get-started-btn">Get Started</a>
+            <a href="#services" class="get-started-btn">Get Started</a>
           </div>
 
           <div class="col-lg-4 box" data-aos="zoom-in">
