--- a/index.html
+++ b/index.html
@@ -292,7 +292,19 @@
             </ul>
             <a href="#services" class="get-started-btn">Get Started</a>
           </div>
-
+          <div class="col-lg-4 box featured" data-aos="zoom-in">
+            <span class="featured-badge">Featured</span>
+            <h3>Brand Strategy</h3>
+            <h4>$75<span>per hour</span></h4>
+            <ul>
+              <li><i class="bx bx-check"></i> Building a brand idenity from the ground up</li>
+              <li><i class="bx bx-check"></i>Rebranding established business</li>
+              <li><i class="bx bx-check"></i>Creating a brand strategy</li>
+              <li><i class="bx bx-check"></i>Mapping out a social media strategy that aligns with the company brand idenity</li>
+              <li><i class="bx bx-check"></i>Developing a plan for websites and other digital assets that accurately reflect the brand voice</li>
+            </ul>
+            <a href="#services" class="get-started-btn">Get Started</a>
+          </div>
           <div class="col-lg-4 box" data-aos="zoom-in">
             <h3>Developer</h3>
             <h4>$49<span>per month</span></h4>
