--- a/index.html
+++ b/index.html
@@ -267,44 +267,46 @@
         <div class="row no-gutters">
 
           <div class="col-lg-4 box" data-aos="zoom-in">
-            <h3>Free</h3>
-            <h4>$0<span>Consultation</span></h4>
+            <h3>Brand Strategy</h3>
+            <h4>$75<span>Per Hour</span></h4>
             <ul>
-              <li><i class="bx bx-check"></i>Branding Foundation</li>
-              <li><i class="bx bx-check"></i>Social Media Platform Outlook</li>
-              <li><i class="bx bx-check"></i>One Hour of Free Consultation</li>
-              <li class="na"><i class="bx bx-x"></i> <span>Branding Strategy</span></li>
-              <li class="na"><i class="bx bx-x"></i> <span>Social Media Optimization</span></li>
+              <li><i class="bx bx-check"></i> Building a brand idenity from the ground up</li>
+              <li><i class="bx bx-check"></i>Rebranding established business</li>
+              <li><i class="bx bx-check"></i>Creating a brand strategy</li>
+              <li><i class="bx bx-check"></i>Mapping out a social media strategy that aligns with the company brand idenity</li>
+              <li><i class="bx bx-check"></i>Developing a plan for a website and other digital assets that accurately reflect the brand voice</li>
             </ul>
             <a href="#contact" class="get-started-btn">Get Started</a>
+          </div>
+         
+          <div class="col-lg-4 box featured" data-aos="zoom-in">
+            <span class="featured-badge">Featured</span>
+            <h3>Social Media Optimization</h3>
+            <h4>$300<span>includes up to 4 platforms</span></h4>
+            <ul>
+              <li><i class="bx bx-check"></i>Account Optimization - branding and creative visuals that are consistent with your business online presence </li>
+              <li><i class="bx bx-check"></i>Searchability Optimization - making sure that your business is (Search Engine Optimized) across all social platforms</li>
+              <li><i class="bx bx-check"></i>Content Strategy Optimization - developing a publishing frequency strategy, figuring out which posts can be published across networks and which post are stand alone per platform</li>
+              <li><i class="bx bx-check"></i>Analytics Support - for 3 months we will monitor and send monthly reports of your social media platforms providing you with key metrics to improve the performace </li>
+              
+            </ul>
+            <a href="#services" class="get-started-btn">Get Started</a>
           </div>
 
           <div class="col-lg-4 box featured" data-aos="zoom-in">
             <span class="featured-badge">Featured</span>
-            <h3>Brand Strategy</h3>
+            <h3>Social Media Branding</h3>
             <h4>$75<span>per hour</span></h4>
             <ul>
               <li><i class="bx bx-check"></i> Building a brand idenity from the ground up</li>
               <li><i class="bx bx-check"></i>Rebranding established business</li>
               <li><i class="bx bx-check"></i>Creating a brand strategy</li>
               <li><i class="bx bx-check"></i>Mapping out a social media strategy that aligns with the company brand idenity</li>
-              <li><i class="bx bx-check"></i>Developing a plan for websites and other digital assets that accurately reflect the brand voice</li>
+              <li><i class="bx bx-check"></i>Developing a plan for a website and other digital assets that accurately reflect the brand voice</li>
             </ul>
             <a href="#services" class="get-started-btn">Get Started</a>
           </div>
-          <div class="col-lg-4 box featured" data-aos="zoom-in">
-            <span class="featured-badge">Featured</span>
-            <h3>Brand Strategy</h3>
-            <h4>$75<span>per hour</span></h4>
-            <ul>
-              <li><i class="bx bx-check"></i> Building a brand idenity from the ground up</li>
-              <li><i class="bx bx-check"></i>Rebranding established business</li>
-              <li><i class="bx bx-check"></i>Creating a brand strategy</li>
-              <li><i class="bx bx-check"></i>Mapping out a social media strategy that aligns with the company brand idenity</li>
-              <li><i class="bx bx-check"></i>Developing a plan for websites and other digital assets that accurately reflect the brand voice</li>
-            </ul>
-            <a href="#services" class="get-started-btn">Get Started</a>
-          </div>
+
           <div class="col-lg-4 box" data-aos="zoom-in">
             <h3>Developer</h3>
             <h4>$49<span>per month</span></h4>
