--- a/index.html
+++ b/index.html
@@ -293,33 +293,22 @@
             <a href="#services" class="get-started-btn">Get Started</a>
           </div>
 
-          <div class="col-lg-4 box featured" data-aos="zoom-in">
-            <span class="featured-badge">Featured</span>
-            <h3>Social Media Branding</h3>
-            <h4>$75<span>per hour</span></h4>
+          <div class="col-lg-4 box" data-aos="zoom-in">
+            
+            <h3>Web Development</h3>
+            <h4>$600<span>price varies per development</span></h4>
             <ul>
-              <li><i class="bx bx-check"></i> Building a brand idenity from the ground up</li>
-              <li><i class="bx bx-check"></i>Rebranding established business</li>
-              <li><i class="bx bx-check"></i>Creating a brand strategy</li>
-              <li><i class="bx bx-check"></i>Mapping out a social media strategy that aligns with the company brand idenity</li>
-              <li><i class="bx bx-check"></i>Developing a plan for a website and other digital assets that accurately reflect the brand voice</li>
+              <li><i class="bx bx-check"></i>All web development are done with computer programming code - your website will be custom made from the ground up</li>
+              <li><i class="bx bx-check"></i>Your site will be responisve which will be compatiable to all devices</li>
+              <li><i class="bx bx-check"></i>Your site will be SEO Optimized - the content of the site will be optimized to have the keywords that relevant to your business and target audience</li>
+              <li><i class="bx bx-check"></i>All development packages comes with unlimited edits and social media friendly</li>
+              <li><i class="bx bx-check"></i>Developing a plan for your website to include other digital assets that accurately reflect the brand voice</li>
+              <li><i class="bx bx-check"></i>Analytics support will be included for 3 months</li>
             </ul>
             <a href="#services" class="get-started-btn">Get Started</a>
           </div>
 
-          <div class="col-lg-4 box" data-aos="zoom-in">
-            <h3>Developer</h3>
-            <h4>$49<span>per month</span></h4>
-            <ul>
-              <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-              <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-              <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-              <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
-              <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
-            </ul>
-            <a href="#" class="get-started-btn">Get Started</a>
-          </div>
-
+          
         </div>
 
       </div>
