--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>jermainebailey60@icloud.com<br>contact@example.com</p>
+                  <p>brandnetictechnologies@gmail.com<br>jermaine@brandnetictechnologies.com</p>
                 </div>
               </div>
               <div class="col-md-6">
