--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <div class="card-body">
                 <h5 class="card-title"><a href="">Analytics Support</a></h5>
                 <p class="card-text">Providing analytic support is the ability to gather and find meaning in data gathered from social media and websites channels to support your business and measure the performace of actions based on those decisions.</p>
-                <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Learn More</a></div>
+                <div class="read-more"><a href="#contact"><i class="bi bi-arrow-right"></i> Learn More</a></div>
               </div>
             </div>
           </div>
@@ -350,11 +350,11 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?</h4>
+            <h4>Is social media really needed to take your brand to the next level?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus.
+              Thankfully, social media allows for easy and effective brand building. Social media has a benefit over traditional media because it can get your brand in front of people much more quickly and easily. Futhermore, it gets your audience looking at your brand even when they aren't thinking about your brand product.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -372,8 +372,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Get in touch!</h2>
+          <p>We love talking about the digital experience from a brand owner veiw and cusutomer. If you have a question or comment, throw your notes in the boxes below. </p>
         </div>
 
         <div class="row">
