--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -114,7 +113,7 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
-                  <h4><a href="#contact">Secure your brand</a></h4>
+                  <h4><a href="#">Secure your brand</a></h4>
                   <p>Define your brand personality and voice, build a consisent, trustworthy brand</p>
                 </div>
               </div>
@@ -143,7 +142,7 @@
               <div class="card-body">
                 <h5 class="card-title"><a href="">Social Media Optimization</a></h5>
                 <p class="card-text">Social media optimization (SMO) is needed to ensure your brand accounts align with your business and it's goals </p>
-                <div class="read-more"><a href="#contact"><i class="bi bi-arrow-right"></i> Learn More</a></div>
+                <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Learn More</a></div>
               </div>
             </div>
           </div>
@@ -155,7 +154,7 @@
               <div class="card-body">
                 <h5 class="card-title"><a href="">Web Development</a></h5>
                 <p class="card-text">Your brand is the story that connects people to the products and services you offer. Having a well built website that matches your brand narrative, your brand will feel even more engaging and authenic.</p>
-                <div class="read-more"><a href="#contact"><i class="bi bi-arrow-right"></i> Learn More</a></div>
+                <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Learn More</a></div>
               </div>
             </div>
 
@@ -168,7 +167,7 @@
               <div class="card-body">
                 <h5 class="card-title"><a href="">Social Media Ad Optimization</a></h5>
                 <p class="card-text">Ad optimization refers to the process of creating ads that are relevant to users by using different techniques.</p>
-                <div class="read-more"><a href="#contact"><i class="bi bi-arrow-right"></i> Learn More</a></div>
+                <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Learn More</a></div>
               </div>
             </div>
           </div>
@@ -180,7 +179,7 @@
               <div class="card-body">
                 <h5 class="card-title"><a href="">Analytics Support</a></h5>
                 <p class="card-text">Providing analytic support is the ability to gather and find meaning in data gathered from social media and websites channels to support your business and measure the performace of actions based on those decisions.</p>
-                <div class="read-more"><a href="#contact"><i class="bi bi-arrow-right"></i> Learn More</a></div>
+                <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Learn More</a></div>
               </div>
             </div>
           </div>
@@ -368,73 +367,7 @@
     </section><!-- End Frequently Asked Questions Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Get in touch!</h2>
-          <p>We love talking about the digital experience from a brand owner veiw and cusutomer. If you have a question or comment, throw your notes in the boxes below. </p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-6">
-
-            <div class="row">
-              <div class="col-md-12">
-                <div class="info-box" data-aos="fade-up">
-                  <i class="bx bx-map"></i>
-                  <h3>Our Location</h3>
-                  <p>Atlanta, Ga 30313</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
-                  <i class="bx bx-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p>brandnetictechnologies@gmail.com<br>jermaine@brandnetictechnologies.com</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box mt-4" data-aos="fade-up" data-aos-delay="100">
-                  <i class="bx bx-phone-call"></i>
-                  <h3>Call Us</h3>
-                  <p>(470) 531-7134<br></p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6 mt-4 mt-lg-0">
-            <form action="forms/contact.php" method="post" data-netlify ="true" role="form" class="php-email-form w-100" data-aos="fade-up">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Contact Section -->
+    <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
@@ -490,10 +423,9 @@
 
         <div class="social-links">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="#https://www.facebook.com/Brandnetic-Technologies" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="#https://www.linkedin.com/company/76987951" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
 
       </div>
