--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Brandnetic Technologies</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span> 2021 Brandnetic Technologies</span></strong>. All Rights Reserved
       </div>
       
     </div>
