--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">Brandnetic Technologies<span>.</span></a></h1>
+        <h1><a href="index.html">Brandnetic Technologies LLC<span>.</span></a></h1>
         
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
