--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
         <div class="row  justify-content-center">
           <div class="col-lg-6">
-            <h3>Brandnetic Technologies</h3>
+            <h3>Brandnetic Technologies LLC</h3>
             <p>Helping people build brands through technology.</p>
           </div>
         </div>
@@ -364,7 +364,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span> 2021 Brandnetic Technologies</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span> 2021 Brandnetic Technologies LLC</span></strong>. All Rights Reserved
       </div>
       
     </div>
