--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
         <div class="row content">
           <div class="col-md-5" data-aos="fade-right">
-            <img src="assets/img/features-1.svg" class="img-fluid" alt="">
+            <img src="assets/img/brandtest.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left">
             <h3>Having a stronger Voice</h3>
