--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
         <div class="row content">
           <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-            <img src="assets/img/features-2.svg" class="img-fluid" alt="">
+            <img src="assets/img/brandtest2.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
             <h3>Utilize today's digital platform to your advantage</h3>
