--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         
         <div class="row content">
           <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-            <img src="assets/img/features-4.svg" class="img-fluid" alt="">
+            <img src="assets/img/brandtest3.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
             <h3>The digital customer experience</h3>
