--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-xl-7 pl-0 pl-lg-5 pr-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
-              <h3 data-aos="fade-in" data-aos-delay="100">Need help with building your brand</h3>
+              <h3 data-aos="fade-in" data-aos-delay="100">Need help with navigating through the digital world</h3>
               <p data-aos="fade-in">
                 Brnadnetic Technologies can help with that
               </p>
