--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-xl-7 pl-0 pl-lg-5 pr-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
-              <h3 data-aos="fade-in" data-aos-delay="100">Need help with navigating through the digital world</h3>
+              <h3 data-aos="fade-in" data-aos-delay="100">Need help with building your brand</h3>
               <p data-aos="fade-in">
                 Brnadnetic Technologies can help with that
               </p>
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up">
                   <i class="bx bx-receipt"></i>
-                  <h4><a href="#">Brand strategy</a></h4>
-                  <p>Drafting a successful brand development strategy begins asking yourself the right questions</p>
+                  <h4><a href="#">Analytics Reporting</a></h4>
+                  <p>The first step for effective social media analytics is developing a goal. Goals can range from increasing revenue to pinpointing service issues.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-cube-alt"></i>
