--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
-                  <h4><a href="#">Secure your brand</a></h4>
-                  <p>Define your brand personality and voice, build a consisent, trustworthy brand</p>
+                  <h4><a href="#">Social Media Optimization</a></h4>
+                  <p>Social media optimization (SMO) helps business owners, content creators and social media marketers get the most out of their social media presence.</p>
                 </div>
               </div>
             </div><!-- End .content-->
