--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-cube-alt"></i>
-                  <h4><a href="#">Think outside the box</a></h4>
-                  <p>Setting yourself apart from others increase brand awareness</p>
+                  <h4><a href="#">Website Development</a></h4>
+                  <p>A business website helps in accomplishing a number of digital marketing strategies that can help a business grow. Web advertising has a wide reach and is one of the most effective forms of advertising.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-images"></i>
