--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up">
                   <i class="bx bx-receipt"></i>
                   <h4><a href="#">Analytics Reporting</a></h4>
-                  <p>The first step for effective social media analytics is developing a goal. Goals can range from increasing revenue to pinpointing service issues.</p>
+                  <p>The first step for effective social media analytics is developing a goal. Goals can range from increasing revenue to pinpointing service issues, and correcting those issues improving performace.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="bx bx-cube-alt"></i>
