--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-images"></i>
-                  <h4><a href="#services">What is your purpose</a></h4>
-                  <p>Create a rock solid clear understanding in why you are in business</p>
+                  <h4><a href="#services">Social Media Optimization</a></h4>
+                  <p>Social media optimization provides the opportunity to reach out to niche audience. The medium allows you to position the brand to the customers on their own terms. In sync with the search engine optimization and the search engine marketing efforts can also help in improving the ranking on the search engines. Since search engines have started acquiring data from social media channels such as Google+ and showing them on the search results, SMO has gained prominence among marketers.                  </p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
