--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
-                  <h4><a href="#">Social Media Ad Optimization</a></h4>
-                  <p>Social media optimization (SMO) helps business owners, content creators and social media marketers get the most out of their social media presence.</p>
+                  <h4><a href="#">Search Engine Optimization</a></h4>
+                  <p>SEO stands for “search engine optimization.” In simple terms, it means the process of improving your site to increase its visibility when people search for products or services related to your business the more likely you are to garner attention and attract prospective and existing customers to your business.</p>
                 </div>
               </div>
             </div><!-- End .content-->
