--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-images"></i>
                   <h4><a href="#services">Social Media Optimization</a></h4>
-                  <p>Social media optimization provides the opportunity to reach out to niche audience. In sync with the search engine optimization and the search engine marketing efforts can also help in improving the ranking on the search engines.</p>
+                  <p>Social media optimization provides the opportunity to reach out to niche audience. In sync with the search engine optimization and the search engine marketing efforts can also help improve in the SEO rankings.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-shield"></i>
